# decaf-emu

./: .travis.yml  CMakeLists.txt
libraries/: CMakeLists.txt
src/decaf-sdl/: CMakeLists.txt  decafsdl.cpp  decafsdl.h  decafsdl_metal.cpp  decafsdl_metal.h  decafsdl_metal.mm  decafsdl_metal_delegate.h  decafsdl_metal_delegate.mm  decafsdl_opengl.cpp  main.cpp
src/libdecaf/: CMakeLists.txt  decaf_debugger.h  decaf_metaldebugger.h
src/libdecaf/src/: decaf_debugger.cpp  decaf_debugger.mm  decaf_metaldebugger.mm
src/libdecaf/src/debugger/: debugger_ui_metal.cpp  debugger_ui_metal.h  debugger_ui_metal.mm
src/libgpu/: CMakeLists.txt  gpu_graphicsdriver.h  gpu_metaldriver.h
src/libgpu/src/: gpu_graphicsdriver.cpp  gpu_graphicsdriver.mm  gpu_metaldriver.mm
src/libgpu/src/metal/: metal_delegate.h  metal_delegate.mm  metal_driver.cpp  metal_driver.h  metal_driver.mm  metal_driver_buffer.mm  metal_driver_graphics.mm  metal_driver_pass.mm  metal_driver_pm4.mm  metal_driver_primitive.mm  metal_driver_private.mm  metal_driver_public.mm  metal_driver_registers.h  metal_driver_shaders.mm  metal_unimplemented.cpp  metal_unimplemented.h
tools/pm4-replay/: sdl_window.cpp
